[package]
name = "ghostlayer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ghostlayer"
crate-type = ["staticlib", "lib"]

[dependencies]
lopdf = { version = "0.40", features = ["embed_image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
] }
thiserror = "2.0"

[profile.release]
panic = "abort"
lto = "thin"
strip = "symbols"
